--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 100%;
 }
 
-
+body{
+  max-width: 100vw;
+  min-width: 90vw;
+  height: 100vh;
+}
+main{
+  width: 100%;
+  min-height: 100%;
+}
 .card{
   width: 400px;
   height: 300px;
@@ -49,24 +56,14 @@
 .card ul li{
   display: inline-flex;
   flex-wrap: wrap;
-  background-color: var(--primary-color);
   margin-top: 20px;
   padding: 5px 7px;
   border-radius: 5px;
 }
-
-.card figcaption a{
-  width: 40px;
-  height: 40px;
-  font-size: 40px;
-  color: var(--primary-color);
-  background-color: transparent;
-  text-align: center;
+ul:nth-child(even){
+  border-left: 5px solid,black;
+  border-right: 1px solid,black;
 }
-
-
-
-
 .btn-container{
   position: absolute;
   left: 10px;
@@ -76,6 +73,35 @@
   margin: 20px;
   justify-content: space-between;
   
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  max-width: 350px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 20px;
+  position: relative;
+  border: solid 2px green;
+}
+
+input {
+  width: 100%;
+  padding: 15px 10px 15px 10px;
+  outline: 0;
+  border: 1px solid rgba(105, 105, 105, 0.397);
+  border-radius: 10px;
+  justify-content: center;
+}
+input::placeholder{
+  font-size: 18px;
+}
+.submit {
+  width: 100%;
+  text-transform: capitalize;
 }
 button{
   padding: 15px;
@@ -89,6 +115,13 @@ button{
   font-weight: 500;
   border: none;
   outline: none;
+  cursor: pointer;
+}
+
+.cars-container{
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 100%;
 }
 
 .deleteBtn{
